<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GroupChat</string>
    <string name="title_activity_home">Group Chat</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="group_chat_text">GROUP CHAT</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="login_btn_text">LOGIN</string>
    <string name="signup_text">Create an account</string>
    <string name="signup_btn_text">SIGNUP</string>
    <string name="hint_email">Email</string>
    <string name="signup_cancel_btn_text">CANCEL</string>
    <string name="error_empty_field_title">Oops!!</string>
    <string name="error_empty_field_message">There are some fields are empty.</string>
    <string name="error_login_done_title">We\'re Sorry!!</string>
    <string name="error_login_done_message">There is some error to connect. Please Try Again.</string>

    <string name="error_title">We\'re Sorry!!</string>
    <string name="error_message">There is some error to connect. Please Try Again.</string>

    <string name="menu_item_logout">LogOut</string>
    <string name="menu_item_new_group">New Group</string>
    <string name="title_activity_group_add">ADD GROUP</string>
    <string name="new_group_text">NEW GROUP</string>
    <string name="new_group_name">Group Name</string>
    <string name="new_group_desc">Group Description</string>
    <string name="choose_member_text">Choose Group Member :</string>
    <string name="new_group_submit">SUBMIT</string>
    <string name="title_activity_group">Group</string>

</resources>
