<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor"
    tools:context="ui.SignUpActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/group_chat_text"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:hint="@string/hint_username"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_username"
            android:layout_marginTop="5dp"
            android:ems="10"
            android:hint="@string/hint_email"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:weightSum="100">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/signup_btn_text"
            android:textSize="20sp"
            android:layout_weight="50"
            android:id="@+id/signup_btn" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signup_cancel_btn_text"
                android:textSize="20sp"
                android:layout_weight="50"
                android:id="@+id/signup_cancel_btn" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>