<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.GroupAddActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/new_group_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/new_group_text"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/group_details_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_group_text"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/new_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_group_name"
            android:maxLength="20"
            android:singleLine="true" />

        <EditText
            android:id="@+id/new_group_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_group_desc"
            android:singleLine="true" />

    </LinearLayout>

    <TextView
        android:id="@+id/choose_member_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/group_details_layout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/choose_member_text"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/group_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/primaryColor"
        android:text="@string/new_group_submit"
        android:textColor="@android:color/white"
        android:textSize="22sp" />

    <ListView
        android:id="@+id/group_member_listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/group_submit_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/choose_member_text"
        android:columnWidth="85dp"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="8dp" />

</RelativeLayout>
